Model and Controller tweaks:
Controller - Landing page's names sorted in ascending order.Adding edit form for existing OldBoy.
Model - find() method now deletes, flashes success message and redirects to landing page.
Also, page() returns to page of one OldBoy.
Routes now have a URI for edit.

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -9,7 +9,7 @@
     <ul>
         @for(oldBoy <- oldBoys) {
             <li>
-                @form(routes.Application.deleteOldBoy(oldBoy.id)) {
+                @form(routes.Application.delete(oldBoy.id)) {
                     <input type="submit" value="Delete">
                 }
             </li>
@@ -18,13 +18,9 @@
     
     <h2>Add a new oldBoy</h2>
     
-    @form(routes.Application.newOldBoy()) {
+    @form(routes.Application.create()) {
 
-        @inputText(oldBoyForm("First Name"))
-
-        @inputText(oldBoyForm("Middle Name"))
-
-        @inputText(oldBoyForm("Last Name"))
+        @inputText(oldBoyForm("Name (First, Middle, Last)"))
 
         @inputText(oldBoyForm("Year Of The Charge"))
 
